--- a/src/main/less/original_petclinic.less
+++ b/src/main/less/original_petclinic.less
@@ -12,9 +12,9 @@
  * limitations under the License.
  */
 
-//@import "typography.less";
-//@import "header.less";
-///@import "responsive.less";
+@import "typography.less";
+@import "header.less";
+@import "responsive.less";
 
 @icon-font-path:    "../../webjars/bootstrap/fonts/";
 
@@ -255,181 +255,4 @@ hr {
   border-top: 1px dotted @spring-brown;
 }
 
-//HEADER.LESS
-.navbar {
-  border-top: 4px solid #6db33f;
-  background-color: #34302d;
-  margin-bottom: 0px;
-  border-bottom: 0;
-  border-left: 0;
-  border-right: 0;
-}
 
-.navbar a.navbar-brand {
-  background: url("../images/spring-logo-dataflow.png") -1px -1px no-repeat;
-  margin: 12px 0 6px;
-  width: 229px;
-  height: 46px;
-  display: inline-block;
-  text-decoration: none;
-  padding: 0;
-}
-
-.navbar a.navbar-brand span {
-  display: block;
-  width: 229px;
-  height: 46px;
-  background: url("../images/spring-logo-dataflow.png") -1px -48px no-repeat;
-  opacity: 0;
-  -moz-transition: opacity 0.12s ease-in-out;
-  -webkit-transition: opacity 0.12s ease-in-out;
-  -o-transition: opacity 0.12s ease-in-out;
-}
-
-.navbar a:hover.navbar-brand span {
-  opacity: 1;
-}
-
-.navbar li > a, .navbar-text {
-  font-family: "montserratregular", sans-serif;
-  text-shadow: none;
-  font-size: 14px;
-
-  /* line-height: 14px; */
-  padding: 28px 20px;
-  transition: all 0.15s;
-  -webkit-transition: all 0.15s;
-  -moz-transition: all 0.15s;
-  -o-transition: all 0.15s;
-  -ms-transition: all 0.15s;
-}
-
-.navbar li > a {
-  text-transform: uppercase;
-}
-
-.navbar .navbar-text {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.navbar li:hover > a {
-  color: #eeeeee;
-  background-color: #6db33f;
-}
-
-.navbar-toggle {
-  border-width: 0;
-
-  .icon-bar + .icon-bar {
-    margin-top: 3px;
-  }
-  .icon-bar {
-    width: 19px;
-    height: 3px;
-  }
-
-}
-//TYPOGRAPHY.LESS
-@font-face {
-  font-family: 'varela_roundregular';
-
-  src: url('../fonts/varela_round-webfont.eot');
-  src: url('../fonts/varela_round-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/varela_round-webfont.woff') format('woff'),
-  url('../fonts/varela_round-webfont.ttf') format('truetype'),
-  url('../fonts/varela_round-webfont.svg#varela_roundregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'montserratregular';
-  src: url('../fonts/montserrat-webfont.eot');
-  src: url('../fonts/montserrat-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/montserrat-webfont.woff') format('woff'),
-  url('../fonts/montserrat-webfont.ttf') format('truetype'),
-  url('../fonts/montserrat-webfont.svg#montserratregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-body, h1, h2, h3, p, input {
-  margin: 0;
-  font-weight: 400;
-  font-family: "varela_roundregular", sans-serif;
-  color: #34302d;
-}
-
-h1 {
-  font-size: 24px;
-  line-height: 30px;
-  font-family: "montserratregular", sans-serif;
-}
-
-h2 {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 24px;
-  margin-bottom: 10px;
-  font-family: "montserratregular", sans-serif;
-}
-
-h3 {
-  font-size: 16px;
-  line-height: 24px;
-  margin-bottom: 10px;
-  font-weight: 700;
-}
-
-p {
-  //font-size: 15px;
-  //line-height: 24px;
-}
-
-strong {
-  font-weight: 700;
-  font-family: "montserratregular", sans-serif;
-}
-
-//RESPONSIVE.LESS
-@media (max-width: 768px) {
-  .navbar-toggle {
-    position:absolute;
-    z-index: 9999;
-    left:0px;
-    top:0px;
-  }
-
-  .navbar a.navbar-brand {
-    display: block;
-    margin: 0 auto 0 auto;
-    width: 148px;
-    height: 50px;
-    float: none;
-    background: url("../images/spring-logo-dataflow-mobile.png") 0 center no-repeat;
-  }
-
-  .homepage-billboard .homepage-subtitle {
-    font-size: 21px;
-    line-height: 21px;
-  }
-
-  .navbar a.navbar-brand span {
-    display: none;
-  }
-
-  .navbar {
-    border-top-width: 0;
-  }
-
-  .xd-container {
-    margin-top: 20px;
-    margin-bottom: 30px;
-  }
-
-  .index-page--subtitle {
-    margin-top: 10px;
-    margin-bottom: 30px;
-  }
-
-}
