--- a/src/main/resources/templates/reporter/specs.html
+++ b/src/main/resources/templates/reporter/specs.html
@@ -5,7 +5,7 @@
     <title>List of specifications</title>
 </head>
 <body>
-<!--/*@thymesVar id="specs" type="org.jfo.swaggerhub.swhreporter.dto.SpecDto"*/-->
+<!--/*@thymesVar id="specs" type="org.jfo.swaggerhub.swhreporter.dto.SpecsDto"*/-->
 
 <h2>Specifications (<span th:text="${specs.numberOfSpec}">0</span>)</h2>
 
