--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -52,17 +52,17 @@
         <ul class="nav navbar-nav navbar-right">
 
             <li th:replace="::menuItem ('/','home','home page','home','Home')">
-                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+<!--                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>-->
                 <span>Home</span>
             </li>
 
             <li th:replace="::menuItem ('/reporter/specs','specs','Specification list','search','Specification list')">
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <!--<span class="glyphicon glyphicon-search" aria-hidden="true"></span>-->
                 <span>Specifications</span>
             </li>
 
             <li th:replace="::menuItem ('/reporter/api/aso-admin_api/2.0.5','api','ASO admin api','search','ASO Admin api 2.0.5')">
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <!--<span class="glyphicon glyphicon-search" aria-hidden="true"></span>-->
                 <span>ASO Admin API - 2.0.5</span>
             </li>
 <!--
