--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>SwaggerHub Reporter Index</title>
-    </head>
-    <body>
-        <div class="row">
-            <div class="col-md-12">
-<!--                <img width="40px" class="img-responsive" src="../static/resources/images/swh_logo.jpg" th:src="@{/resources/images/swh_logo.jpg}"/>-->
-                <h2 th:text="#{welcome} + ' to SwaggerHub Reporter'">Welcome</h2>
-            </div>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8"/>
+    <title>SwaggerHub Reporter Index</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+</head>
+<body>
+
+<div class="row">
+    <div class="col-md-12">
+        <!--                <img width="40px" class="img-responsive" src="../static/resources/images/swh_logo.jpg" th:src="@{/resources/images/swh_logo.jpg}"/>-->
+        <h2 th:text="#{welcome} + ' to SwaggerHub Reporter'">Welcome</h2>
+    </div>
+</div>
+
+</body>
 </html>
