--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,105 +1,146 @@
 <!doctype html>
-<html th:fragment="layout (template, menu)">
+<html th:fragment="layout (template, menu)" >
+
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
 <head>
 
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.png}">
 
-  <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.png}">
+    <!-- CSS only -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css" integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/sandstone/bootstrap.min.css" integrity="sha384-zEpdAL7W11eTKeoBJK1g79kgl9qjP7g84KfK3AZsuonx38n8ad+f5ZgXtoSDxPOh" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-    <title>SwaggerHub reporter :: Explore and generate reports</title>
-
-  <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}" />
+    <!--    <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}"/>-->
+    <title>SwaggerHub reporter :: Explore and generate reports</title>
 
 </head>
 
 <body>
 
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" th:href="@{/}"><span></span></a>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
-          <span class="sr-only">
-            <os-p>Toggle navigation</os-p>
-          </span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="navbar-collapse collapse" id="main-navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+    <span class="navbar-brand">SwhReporter</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <ul class="nav navbar-nav navbar-right" th:remove="all">
+    <div class="collapse navbar-collapse" id="navbarColor03">
+        <ul class="navbar-nav mr-auto" th:remove="all">
 
-          <li th:fragment="menuItem (path,active,title,glyph,text)" class="active" th:class="${active==menu ? 'active' : ''}">
-                <a th:href="@{__${path}__}" th:title="${title}">
-                    <span th:class="'glyphicon  glyphicon-'+${glyph}" class="glyphicon glyphicon-home" aria-hidden="true"></span>
+            <li th:fragment="menuItem (path,active,title,glyph,text)" class="active"
+                th:class="${active==menu ? 'active' : ''}">
+                <a class="nav-link" th:href="@{__${path}__}" th:title="${title}">
+                        <span th:class="'glyphicon  glyphicon-'+${glyph}" aria-hidden="true"></span>
                     <span th:text="${text}">Template</span>
                 </a>
             </li>
 
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="navbar-nav mr-auto">
 
-            <li th:replace="::menuItem ('/','home','home page','home','Home')">
-<!--                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>-->
-                <span>Home</span>
+            <li th:replace="::menuItem ('/','Home','Home page','home','Home')" class="nav-item active"></li>
+            <li th:replace="::menuItem ('/reporter/specs','specs','Specification list','search','Specification list')" class="nav-item active"></li>
+            <li th:replace="::menuItem ('/reporter/api/Account Transfer API/2.18.5','api','ASO admin api','search','ASO Admin api 2.0.5')"></li>
+            <span class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Reports</a>
+                <div class="dropdown-menu">
+                    <span class="dropdown-item" th:replace="::menuItem ('/reporter/api/aso-admin_api/2.0.5','api','ASO admin api','search','Wrong defined APIs')"></span>
+<!--                    <div class="dropdown-divider"></div>-->
+<!--                    <a class="dropdown-item" href="#">Separated link</a>-->
+                </div>
             </li>
-
-            <li th:replace="::menuItem ('/reporter/specs','specs','Specification list','search','Specification list')">
-                <!--<span class="glyphicon glyphicon-search" aria-hidden="true"></span>-->
-                <span>Specifications</span>
-            </li>
-
-            <li th:replace="::menuItem ('/reporter/api/aso-admin_api/2.0.5','api','ASO admin api','search','ASO Admin api 2.0.5')">
-                <!--<span class="glyphicon glyphicon-search" aria-hidden="true"></span>-->
-                <span>ASO Admin API - 2.0.5</span>
-            </li>
+        </ul>
+    </div>
+</nav>
 <!--
-                <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
-                    <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-                    <span>Veterinarians</span>
+
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" th:href="@{/}"><span></span></a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+                <span class="sr-only">
+                    <os-p>Toggle navigation</os-p>
+                </span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse" id="main-navbar">
+
+            <ul class="nav navbar-nav navbar-right" th:remove="all">
+
+                <li th:fragment="menuItem (path,active,title,glyph,text)" class="active"
+                    th:class="${active==menu ? 'active' : ''}">
+                    <a th:href="@{__${path}__}" th:title="${title}">
+                        <span th:class="'glyphicon  glyphicon-'+${glyph}" class="glyphicon glyphicon-home"
+                              aria-hidden="true"></span>
+                        <span th:text="${text}">Template</span>
+                    </a>
                 </li>
 
-                <li th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','warning-sign','Error')">
-                    <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
-                    <span>Error</span>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+
+                <li th:replace="::menuItem ('/','home','home page','home','Home')">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                    <span>Home</span>
                 </li>
--->
+
+                <li th:replace="::menuItem ('/reporter/specs','specs','Specification list','search','Specification list')">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                    <span>Specifications</span>
+                </li>
+
+                <li th:replace="::menuItem ('/reporter/api/aso-admin_api/2.0.5','api','ASO admin api','search','ASO Admin api 2.0.5')">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                    <span>ASO Admin API - 2.0.5</span>
+                </li>
+
             </ul>
         </div>
     </div>
 </nav>
+
+-->
+
 <div class="container-fluid">
     <div class="container xd-container">
 
-      <th:block th:include="${template}" />
+        <th:block th:include="${template}"/>
 
         <br/>
         <br/>
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <img src="../static/resources/images/spring-pivotal-logo.png" th:src="@{/resources/images/spring-pivotal-logo.png}"
+                    <img src="../static/resources/images/spring-pivotal-logo.png"
+                         th:src="@{/resources/images/spring-pivotal-logo.png}"
                          alt="Sponsored by Pivotal"/></div>
             </div>
         </div>
     </div>
 </div>
 
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
+
 
 </body>
 
